@@ -1,4 +1,5 @@
 import os, os.path
+import copy
 try:
     import configparser
 except: # pragma: no cover
@@ -14,7 +15,11 @@ default_configuration= {'normalization': {'ro':'8.',
                         'astropy': {'astropy-units':'False',
                                     'astropy-coords':'True'},
                         'plot': {'seaborn-bovy-defaults':'False'},
-                        'warnings': {'verbose':'False'}}
+                        'warnings': {'verbose':'False'},
+                        'version-check': {'do-check':'True',
+                                          'check-non-interactive':'True',
+                                          'check-non-interactive-every':'1',
+                                          'last-non-interactive-check':'2000-01-01'}}
 default_filename= os.path.join(os.path.expanduser('~'),'.galpyrc')
 def check_config(configuration):
     # Check that the configuration is a valid galpy configuration
@@ -54,6 +59,10 @@ if not cfilename:
 if not check_config(__config__):
     write_config(cfilename[-1],__config__)
     __config__.read(cfilename[-1])
+# Store a version of the config in case we need to re-write parts of it,
+# but don't want to apply changes that we don't want to re-write
+configfilename= cfilename[-1]
+__orig__config__= copy.deepcopy(__config__)
 
 # Set configuration variables on the fly
 def set_ro(ro):
